# personal-finance-mlops

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
notebooks/: 01_explore_data.ipynb
src/: api.py  train.py
src/static/: index.html
tests/: test_api.py
